[tool.black]
line-length = 120

[tool.poetry]
name = "forum-assets"
version = "0.0.0"
description = ""
authors = ["Arduino <info@arduino.cc>"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.31.0"

[tool.poetry.group.dev.dependencies]
yamllint = "^1.35.1"
codespell = "^2.2.6"
black = "24.4.2"
flake8 = "7.0.0"
pep8-naming = "0.14.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
