[tool.black]
line-length = 120

[tool.poetry]
name = "forum-assets"
version = "0.0.0"
description = ""
authors = ["Arduino <info@arduino.cc>"]

[tool.poetry.dependencies]
python = ">=3.9.0, <3.12.0"
requests = "^2.32.3"

[tool.poetry.group.dev.dependencies]
yamllint = "^1.35.1"
codespell = "^2.4.1"
black = "24.10.0"
flake8 = "7.1.1"
pep8-naming = "0.14.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
